# MultiMeditron

./: .buildinfo  .gitignore  .gitmodules  README.md  genindex.html  index.html  inference.py  objects.inv  py-modindex.html  pylock.toml  pyproject.toml  search.html  searchindex.js  submit_all_languages.sh  submit_all_runai.sh  tash show --name-only stash@{0}
.github/workflows/: docker.yml  docs.yml  sphinx-check.yml
_sources/guides/: dataset_format.rst.txt  guide.rst.txt  training.rst.txt
_sources/ref/: modules.rst.txt  multimeditron.cli.rst.txt  multimeditron.config.rst.txt  multimeditron.dataset.preprocessor.rst.txt  multimeditron.model.modalities.moe.rst.txt  multimeditron.model.modalities.rst.txt  multimeditron.rst.txt  multimeditron.tools.rst.txt
config/: config_alignment.yaml
config/rl/ds/: config-baai-taco.yaml  config-math-shepherd.yaml  config-nemotron-post-training.yaml
config/rl/grpo/: test.yaml
cookbook/: README.md  deepspeed.json  training.sh  training_template.sh
cookbook/assets/: edf.toml
cookbook/sft/single_clip/: config_alignment.yaml
docker/: Dockerfile  Dockerfile.verl  entrypoint.sh  envsubst.py
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/guides/: add_modality.rst  configuration.rst  dataset_format.rst  guide.rst  known_issues.rst  quickstart.rst  training.rst
docs/source/ref/: multimeditron.dataset.loader.image.rst  multimeditron.dataset.loader.rst  multimeditron.dataset.rst  multimeditron.model.rst  multimeditron.train.rst  multimeditron.utils.rst  multimeditron.verl.rst
examples/: config_experts.yaml
guides/: add_modality.html  configuration.html  dataset_format.html  guide.html  known_issues.html  quickstart.html  training.html
notebooks/selector/: fine-tuning.py  selector.ipynb
ref/: modules.html  multimeditron.cli.html  multimeditron.config.html  multimeditron.dataset.html  multimeditron.dataset.loader.html  multimeditron.dataset.loader.image.html  multimeditron.dataset.preprocessor.html  multimeditron.html  multimeditron.model.html  multimeditron.model.modalities.html  multimeditron.model.modalities.moe.html  multimeditron.tools.html  multimeditron.train.html  multimeditron.utils.html  multimeditron.verl.html
scripts/: download-datasets.sh
src/multimeditron/: utils.py
src/multimeditron/cli/: __init__.py  debug.py  experts.py  preprocess.py  train.py  verl.py
src/multimeditron/config/: preprocess-ds.yaml  verl_trainer.yaml
src/multimeditron/dataset/: sample_preprocessor.py
src/multimeditron/experts/: config_maker.py  train_clip.py
src/multimeditron/model/: attention.py  constants.py  (+3 more)
ui/: README.md  app.py  launch_gradio.sh
ui/assets/: chat.css
(+130 files in other folders)
